cabal-version:      3.0
name:               monoid-action
version:            0.1.0.0
synopsis:           A Haskell library for the monoid action typeclass.
description:        Please see the README on GitHub at <https://github.com/lambda-dom/monoid-action#readme>
category:           Data
homepage:           https://github.com/lambda-dom/monoid-action#readme
author:             lambda-dom
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         grodrigues.math@gmail.com
copyright:          2025 G. Rodrigues
build-type:         Simple
extra-doc-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/lambda-dom/monoid-action

common common-fields
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
    build-depends:
        -- GHC 9.6
        base >=4.18 && <4.19,
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wmissing-deriving-strategies
        -Wunused-packages

library
    import: common-fields
    hs-source-dirs:
        src
    build-depends:
        comonad >=5.0 && <5.1
    other-modules:
    exposed-modules:
        Data.Monoid.Action
