cabal-version:      3.0
name:               monoid-action
version:            0.1.0.0
synopsis:           A Haskell library for the monoid action typeclass.
description:        Please see the README on GitHub at <https://github.com/lambda-dom/monoid-action#readme>
category:           Data
homepage:           https://github.com/lambda-dom/monoid-action#readme
author:             G. Rodrigues
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         grodrigues.math@gmail.com
copyright:          2025 G. Rodrigues
build-type:         Simple
extra-doc-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/lambda-dom/monoid-action

common common-fields
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
    build-depends:
        -- GHC 9.6
        base >=4.18 && <4.19,
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wmissing-deriving-strategies
        -Wunused-packages

library
    import: common-fields
    hs-source-dirs:
        src
    build-depends:
        comonad >=5.0 && <5.1,
        array >=0.5 && <0.6,
        vector >=0.13 && <0.14,
        containers >=0.6 && <0.8,
        bytestring >=0.11 && <0.13,
        text >=2.0 && <2.2,
    other-modules:
    exposed-modules:
        Data.Monoid.Action.Bits
        Data.Monoid.Action

test-suite trisagion-tests
    import: common-fields
    type: exitcode-stdio-1.0
    hs-source-dirs:
        tests
    main-is: Spec.hs
    build-depends:
        hspec ^>=2.11 && <2.12,
        monoid-action,
    build-tool-depends:
        hspec-discover:hspec-discover
    other-modules:
        Tests.Monoid.Action.BitsSpec
